account/account-pod.yaml
# this file for deployment account
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: saving-account
  labels:
    app: saving-account
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: saving-account
        version: v1
    spec:
      containers:
      - name: account
        image: tnindo/account:v1pocServiceMesh.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
        volumeMounts:
        - mountPath: /go/src/account/logs
          name: account-logs
      restartPolicy: Always
      volumes:
      - name: account-logs
        hostPath:
          path: /home/zainul/poc-service-mesh/data-log/saving_account/logs 
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
